--- a/SnsLoginWithJwt/frontend/package.json
+++ b/SnsLoginWithJwt/frontend/package.json
@@ -11,11 +11,7 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.2.4",
-    "@stomp/stompjs": "^7.0.0",
-    "sockjs-client": "^1.6.1",
-    "date-fns": "^3.5.0",
-    "axios": "^1.6.8"
+    "next": "15.3.0"
   },
   "devDependencies": {
     "typescript": "^5",
@@ -25,8 +21,7 @@
     "@tailwindcss/postcss": "^4",
     "tailwindcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "15.2.4",
-    "@eslint/eslintrc": "^3",
-    "@types/sockjs-client": "^1.5.4"
+    "eslint-config-next": "15.3.0",
+    "@eslint/eslintrc": "^3"
   }
 }
