활성 세션 개수 값이 undefined로 뜨는 오류 수정

--- a/[WebSocket] webSocketTest/.gitignore
+++ b/[WebSocket] webSocketTest/.gitignore
@@ -26,6 +26,9 @@ out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 /logs/*
+/logs/websocket-app.log
+/logs/websocket-app.log.*
+
 
 ### NetBeans ###
 /nbproject/private/
