기타 문서 및 빌드 수정

--- a/[WebSocket+Stomp+Redis] webSocketWithStompWithPubSub/build.gradle
+++ b/[WebSocket+Stomp+Redis] webSocketWithStompWithPubSub/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	implementation 'org.springframework.boot:spring-boot-starter-cache' // 캐시 추상화(@EnableCaching, @Cacheable 등)를 사용할 수 있으며, 다양한 캐시 구현체(예: EhCache, Redis 등)와 연동이 가능
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
